--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ button {
 	justify-content: space-between;
 	}
 	nav > a {
-	    color: white;
+	    color: skyblue;
 	    padding: 10px;
 	    text-decoration: none;
 	    font-weight: bold;
